--- a/inicihtml/index.html
+++ b/inicihtml/index.html
@@ -8,9 +8,11 @@
 <header>
     <h1>Pràctica 2: Inici en HTML</h1>
 
-    <resum>En aquesta pràctica començarem amb els fonaments bàsics de l'HTML.</resum>
+    <resum>En aquesta pràctica començarem amb els fonaments 
+        bàsics de l'HTML.</resum>
 
-    <p>Segueix aquests dos tutorials de la <strong>Mozilla Developer Network</strong>:</p>
+    <p>Segueix aquests dos tutorials de la 
+        <strong>Mozilla Developer Network</strong>:</p>
    
     <ul>
         <li><a href="https://developer.mozilla.org/ca/docs/Learn/HTML/Introducci%C3%B3_al_HTML/Getting_started">
@@ -24,7 +26,7 @@
 <section>
     <h2>Desenvolupament de la pràctica</h2>
     <p>La pràctica consisteix en crear una pàgina web.</p>
-    <check>Aquesta web s'haurà de <a href="/publishgithubpages/?replace-nom-repository=smx-m8-uf5-practica2">publicar a GitHub Pages</a> amb el nom <name>smx-m8-uf5-practica2</name></check>
+    <check>Aquesta web s'haurà de <a noicon href="/publishgithubpages/?replace-nom-repository=smx-m8-uf5-practica2">publicar a GitHub Pages</a> amb el nom <name>smx-m8-uf5-practica2</name></check>
     <check>S'haurà de <a href="/setupwebserver/?replace-nom-contenidor=practica2">preparar un servidor web local</a>, per al desenvolupament de la web.</check>
     <check>El desenvolupament de la web haurà de complir, al menys, els següents criteris:</check>
     <ul>
