--- a/sofishow/index.html
+++ b/sofishow/index.html
@@ -6,7 +6,22 @@
 
 <nav></nav>
 
+  <!--
+    codefile margin-top
+    codefile link, en color
+  -->
+  <!--quitar el marin-right en <file> -->
+  <!-- agregar <observe>. El <info> es 'para mas info'-->
+
+
 <header>
+    <!--
+        <br><br><br>
+    <object id="emb" width="100%" height=500px data="https://repl.it/@GerardFalco1/e1?lite=true"></object>
+    <iframe id="emb" width="100%" height=500px src="https://repl.it/@GerardFalco1/e1?lite=true"></iframe>
+    <embed src="https://repl.it/@GerardFalco1/e1?lite=true"  width="100%" height="600">
+-->
+
     <h1>Sofi Show</h1>
     
     <resum>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec rhoncus pretium est condimentum congue. Nam lobortis est eu lacinia venenatis. Aliquam erat volutpat.</resum>
@@ -14,6 +29,8 @@
     <check>Curabitur ultricies</check>
     <check>Malesuada <replace>porttitor</replace> tincidunt</check>
     
+   
+
     <codefile><a href="https://github.com/gerardfp/euismod.txt">lereum</a></codefile>
     <code css>
         html {
