--- a/smx-m8/index.html
+++ b/smx-m8/index.html
@@ -132,6 +132,19 @@ a {
                 <div class="button">Start</div>    
             </div>
         </div>
+    </a><a href="/entorndetreball">
+        <div class="card web">
+            <div class="card-title">
+                <span>Entorn de treball</span>
+            </div>
+            <div class="card-description">
+
+            </div>
+            <div class="card-footer">
+                <div class="icon"></div>
+                <div class="button">Start</div>    
+            </div>
+        </div>
     </a><a href="/webforum">
         <div class="card web">
             <div class="card-title">
@@ -158,10 +171,36 @@ a {
                 <div class="button">Start</div>    
             </div>
         </div>
+    </a><a href="/inicihtml">
+        <div class="card web">
+            <div class="card-title">
+                <span>Inici en HTML</span>
+            </div>
+            <div class="card-description">
+
+            </div>
+            <div class="card-footer">
+                <div class="icon"></div>
+                <div class="button">Start</div>    
+            </div>
+        </div>
     </a><a href="/webcms">
         <div class="card web">
             <div class="card-title">
                 <span>Gestor de continguts</span>
+            </div>
+            <div class="card-description">
+
+            </div>
+            <div class="card-footer">
+                <div class="icon"></div>
+                <div class="button">Start</div>    
+            </div>
+        </div>
+    </a><a href="/inicicss">
+        <div class="card web">
+            <div class="card-title">
+                <span>Inici en CSS</span>
             </div>
             <div class="card-description">
 
@@ -184,36 +223,23 @@ a {
                 <div class="button">Start</div>    
             </div>
         </div>
+    </a><a href="/webapps">
+        <div class="card web">
+            <div class="card-title">
+                <span>Web Apps</span>
+            </div>
+            <div class="card-description">
+
+            </div>
+            <div class="card-footer">
+                <div class="icon"></div>
+                <div class="button">Start</div>    
+            </div>
+        </div>
     </a><a href="/webaccounts">
         <div class="card web">
             <div class="card-title">
                 <span>Comptes d&#39;usuari</span>
-            </div>
-            <div class="card-description">
-
-            </div>
-            <div class="card-footer">
-                <div class="icon"></div>
-                <div class="button">Start</div>    
-            </div>
-        </div>
-    </a><a href="/inicihtml">
-        <div class="card web">
-            <div class="card-title">
-                <span>Inici en HTML</span>
-            </div>
-            <div class="card-description">
-
-            </div>
-            <div class="card-footer">
-                <div class="icon"></div>
-                <div class="button">Start</div>    
-            </div>
-        </div>
-    </a><a href="/entorndetreball">
-        <div class="card web">
-            <div class="card-title">
-                <span>Entorn de treball</span>
             </div>
             <div class="card-description">
 
