--- a/smx-m8/index.html
+++ b/smx-m8/index.html
@@ -249,5 +249,18 @@ a {
                 <div class="button">Start</div>    
             </div>
         </div>
+    </a><a href="/einesgoogle">
+        <div class="card web">
+            <div class="card-title">
+                <span>Eines Google</span>
+            </div>
+            <div class="card-description">
+
+            </div>
+            <div class="card-footer">
+                <div class="icon"></div>
+                <div class="button">Start</div>    
+            </div>
+        </div>
     </a>
 </div>
