--- a/entorndetreball/index.html
+++ b/entorndetreball/index.html
@@ -145,7 +145,7 @@
             <p>Per a <strong>sortir</strong> del contenidor, executa en el propi contenidor la comanda:</p>
             <terminal>
                 <host>@mycontainer</host>
-                <shell>lxc exec mycontainer bash</shell>
+                <shell>exit</shell>
             </terminal>
         </li>
         <li>
