--- a/entorndetreball/index.html
+++ b/entorndetreball/index.html
@@ -7,7 +7,9 @@
 <nav></nav>
 <header>
     <h1>Entorn de treball</h1>
+</header>
 
+<section>
     <resum>
         <p>En aquesta pràctica aprendrem a instal·lar i utilitzar les eines necessàries per al desenvolupament web.</p>
         <p>A l'àmbit professional s'utilitzen una àmplia varietat d'eines, però nosaltres començarem amb les mínimes
@@ -35,7 +37,7 @@
         <a href="https://ubuntu.com">Ubuntu 20.04</a>. Si no el tens 
         instal·lat, el pots utilitzar en una màquina virtual.</warn>
     
-</header>
+</section>
 
 <section>
     <h2>Editor de text</h2>
