--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
@@ -95,6 +96,7 @@ a {
 }
 
 </style>
+</head>
 
 <div class="cards">
     <a href="/dam-m8">
