--- a/javatutorial/quizz.html
+++ b/javatutorial/quizz.html
@@ -1,58 +1,65 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<script src="https://cdn.jsdelivr.net/npm/clipboard@2.0.6/dist/clipboard.min.js"></script>
 <script type="module" src="/sofi/js/script.js"></script>
 <link rel="stylesheet" href="/sofi/css/estil.css">
 
-<header>
-<h1>Java Tutorial</h1>
-
 <quizz>
     <question single>
-        <statement>Troba el literal invàlid</statement>
-        <answer correct>"10000000"</answer>
-        <answer>'10000000'</answer>
-        <answer>10_000_000</answer>
-        <answer>10000000</answer>
-        <button>Enviar</button>
+        <statement>
+            <p>Què imprimirà el següent codi?</p>
+            <code java>
+                System.out.print("1");
+                System.out.print("2");
+                System.out.println("3");
+                System.out.println();
+                System.out.println("4");
+            </code>
+        </statement>
+        <o>
+            <shell>1234</shell></o>
+        <o>
+            <shell>
+            123
+            
+            4
+            </shell>
+        </o>
+        <o><shell>1234</shell></o>
+    </question>
+</quizz>
+
+<quizz>
+    <question match>
+        <statement>Emparella els tipus de literals</statement>
+        <o>String</o><o>"464531######0207"</o>
+        <o>Número</o><o>100_000_000</o>
+        <o>Caracter</o><o>'H'</o>
+        <o>Literal invàlid</o><o>'text'</o>
+    </question>
+
+    <question single>
+        <statement>Els caracters literals s'escriuen com</statement>
+        <o correct>'A', 'B', 'C',...</o>
+        <o>A, B, C, ...</o>
+        <o>{A}, {B}, {C}, ...</o>
+        <o>"A", "B", "C", ...</o>
     </question>
 
     <question multi>
-        <statement>Troba el literal invàlid</statement>
-        <answer correct>"10000000"</answer>
-        <answer correct>'10000000'</answer>
-        <answer>10_000_000</answer>
-        <answer>10000000</answer>
-        <button>Enviar</button>
-    </question>    
+        <statement>Selecciona els literals <strong>string</strong> vàlids</statement>
+        <o>443</o>
+        <o>'q'</o>
+        <o correct>"q"</o>
+        <o>'5'</o>
+        <o correct>"text"</o>
+        <o correct>"2312"</o>
+    </question>
+
+    <question multi>
+        <statement>Selecciona les sentències que <strong>NO</strong> són vàlides</statement>
+        <o correct>"123456" és un número</o>
+        <o>"1" és un string</o>
+        <o>'8' és un caracter</o>
+        <o>1 és un número</o>
+    </question>
 </quizz>
-
-</header>
-
-<section>
-    <h2>Hello world!</h2>
-    <!--
-    <p>La tradició suggereix que el primer programa que es fa ha d'imprimir
-        el text <string>Hello, World!</string> per pantalla. Així que som-hi!
-    </p>
-
-    
-    <code java>
-        public class Main {
-            public static void main(String[] args){
-                System.out.println("Hello, World!");
-            }
-        }
-    </code>
-    -->
-
-    <quizz>
-        <question>
-            <statement>Troba el literal invàlid</statement>
-            <answer>"10000000"</answer>
-            <answer correct>'10000000'</answer>
-            <answer>10_000_000</answer>
-            <answer>10000000</answer>
-        </question>
-    </quizz>
-</section>
