--- a/einesgoogle/index.html
+++ b/einesgoogle/index.html
@@ -6,6 +6,8 @@
 
 <header>
     <h1>Eines Google</h1>
+</header>
+<section>
     <resum>
         <p>En aquesta pràctica aprendrem a utilizar diverses eines web
             proporcionades per Google.
@@ -57,10 +59,10 @@
         </ul>
 
         <p>Aquí teniu un petit exemple que us pot orientar en el vostre treball:
-            <a href="https://sites.google.com/view/enquesta-webdevs/">https://sites.google.com/view/enquesta-webdevs/</a>
+            <br><a href="https://sites.google.com/view/enquesta-webdevs/">https://sites.google.com/view/enquesta-webdevs/</a>
         </p>
     </resum>
-</header>
+</section>
 
 <section>
     <h2>Desenvolupament de la pràctica</h2>
